Fix focus state gap on desktop
Fixes https://github.com/alphagov/govuk-frontend/issues/2371

This commit removes the font and line-height being set on the accordion button, which we were relying on to style the accordion heading text. It seemed like this was affecting the other text elements inside the accordion sections and impacting the focus state.

Instead, we are directly setting the font and line height on the accordion heading text. Although browsers will set their own
font styles for buttons, this shouldn't affect the component because we're setting the text styles on the individual span elements within the button.
These should override any browser styles being set.

We also need to adjust the spacing between text elements a bit as a result, otherwise the height of the accordion (and therefore the touch target
is reduced). Read more about that here https://github.com/alphagov/govuk-frontend/issues/2371#issuecomment-932126039

--- a/src/govuk/components/accordion/_index.scss
+++ b/src/govuk/components/accordion/_index.scss
@@ -15,8 +15,6 @@
 
   .govuk-accordion__section-heading {
     // Override browser defaults to ensure consistent element height
-    // Font size is set in .govuk-accordion__section-button
-    @include govuk-font(24);
 
     margin-top: 0; // Override browser default
     margin-bottom: 0; // Override browser default
@@ -28,10 +26,14 @@
   // Buttons within the sections don’t need default styling
   .govuk-accordion__section-button {
     @include govuk-text-colour;
-    @include govuk-font($size: 24, $weight: bold);
+
     display: block;
     margin-bottom: 0;
     padding-top: govuk-spacing(3);
+  }
+
+  .govuk-accordion__section-heading-focus-wrapper {
+    @include govuk-font($size: 24, $weight: bold);
   }
 
   // Remove the bottom margin from the last item inside the content
@@ -329,11 +331,7 @@
     // As a result this is applied to the pseudo element that has a display:block property to maintain Design
     .govuk-accordion__section-summary:before,
     .govuk-accordion__section-toggle:before {
-      margin-top: govuk-spacing(2);
-
-      @include govuk-media-query ($from: desktop) {
-        margin-top: 8px;
-      }
+      margin-top: 13px;
     }
 
     // Space between icon and text,
